# tokri

./: .gitignore  CMakeLists.txt  README.md  windows-installer-script.iss
.github/workflows/: windows-build.yml
resources/: icons.qrc  tokri.rc
src/: MacWindowLevel.h  MacWindowLevel.mm  copyworker.cpp  dropawarefilesystemmodel.cpp  drophandler.cpp  drophandler.h  filedetailsmodel.cpp  filedetailsmodel.h  horizontalshakedetector.cpp  horizontalshakedetector.h  listitemdelegate.cpp  listitemdelegate.h  main.cpp  nointernaldraglistview.cpp  nointernaldraglistview.h  sortfilterproxy.cpp  sortfilterproxy.h  textfile.cpp  textfile.h  themeprovider.h  thumbnailprovider.cpp  thumbnailprovider.h  tokriwindow.cpp  tokriwindow.h
